updates across some pages

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="team-members.html">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Team Members</span></a>
             </li>
@@ -141,9 +141,15 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="publications.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Publications</span></a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="products.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Data Products</span></a>
             </li>
 
             <!-- Divider -->
@@ -178,19 +184,6 @@
                         <i class="fa fa-bars"></i>
                     </button>
 
-                    <!-- Topbar Search -->
-                    <form
-                        class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                        <div class="input-group">
-                            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
-                                aria-label="Search" aria-describedby="basic-addon2">
-                            <div class="input-group-append">
-                                <button class="btn btn-primary" type="button">
-                                    <i class="fas fa-search fa-sm"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
@@ -219,38 +212,6 @@
                             </div>
                         </li>
 
-                        <!-- Nav Item - Alerts -->
-                        <li class="nav-item dropdown no-arrow mx-1">
-                            <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fas fa-bell fa-fw"></i>
-                                <!-- Counter - Alerts -->
-                                <!-- UPDATE THE NUMBER OF ALERTS HERE -->
-                                <span class="badge badge-danger badge-counter">1</span>
-                            </a>
-                            <!-- Dropdown - Alerts -->
-                            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                                aria-labelledby="alertsDropdown">
-                                <h6 class="dropdown-header">
-                                    Alerts Center
-                                </h6>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="mr-3">
-                                        <div class="icon-circle bg-primary">
-                                            <i class="fas fa-file-alt text-white"></i>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="small text-gray-500">December 4, 2024</div>
-                                        <span>TUNES website is created!</span>
-                                    </div>
-                                </a>
-                            </div>
-                        </li>
-
-
-                        <div class="topbar-divider d-none d-sm-block"></div>
-
                     </ul>
 
                 </nav>
@@ -263,6 +224,20 @@
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
                         <h1 class="h3 mb-0 text-gray-800">About TUNES</h1>
                     </div>
+                        <p class="mb-4">
+                          JWST is currently -- and completely unintentionally -- conducting the largest survey of exoplanet atmospheric
+                          escape ever performed. NIRISS/SOSS is sensitive to the metastable helium 10380 Angstrom triplet (He*), a
+                          powerful probe of atmospheric outflows. By the start of Cycle 3, 21 planets will have publicly-available
+                          NIRISS/SOSS transit and/or eclipse coverage on this feature, already the largest homogeneous escape survey
+                          ever conducted by a factor of two. We propose an archival program to realize the myriad scientific gains
+                          enabled by this new sample, including a uniform analysis of planetary mass-loss rates and searches for helium
+                          emission, tails, and chromospheric spot-crossing events. Our primary community-facing scientific product will
+                          be an online repository of all He* lightcurves obtained with NIRISS/SOSS analyzed with multiple pipelines to
+                          ensure robustness. This program, which we call TUNES (The Unintentional NIRISS Escape Survey), will
+                          cement JWST's unanticipated legacy as an atmospheric escape machine without requiring any additional
+                          observing time.
+                        </p>
+
 
                     <!-- Content Row -->
                     <div class="row">
@@ -346,20 +321,6 @@
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                                     <h6 class="m-0 font-weight-bold text-primary">Earnings Overview</h6>
-                                    <div class="dropdown no-arrow">
-                                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                                            aria-labelledby="dropdownMenuLink">
-                                            <div class="dropdown-header">Dropdown Header:</div>
-                                            <a class="dropdown-item" href="#">Action</a>
-                                            <a class="dropdown-item" href="#">Another action</a>
-                                            <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="#">Something else here</a>
-                                        </div>
-                                    </div>
                                 </div>
                                 <!-- Card Body -->
                                 <div class="card-body">
@@ -576,7 +537,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2021</span>
+                        <span>Copyright &copy; tunes-jwst 2024</span>
                     </div>
                 </div>
             </footer>
