--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="team-members.html">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Team Members</span></a>
             </li>
@@ -223,209 +223,17 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Survey Targets</h1>
-                    <p class="mb-4">Here, we provide an overview of the properties for the targets in our survey.</p>
+                    <h1 class="h3 mb-2 text-gray-800">Collaboration Publications</h1>
+                    <p class="mb-4">Here, we curated a library of publications which are the result of this collaboration.</p>
 
-                    <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">Survey Targets</h6>
+                            <h6 class="m-0 font-weight-bold text-primary">Paper Title Here</h6>
                         </div>
                         <div class="card-body">
-                            <div class="table-responsive">
-                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                                    <thead>
-                                        <tr>
-                                            <th>Target</th>
-                                            <th>Phase</th>
-                                            <th>Period [days]</th>
-                                            <th>Radius [R<sub>Earth</sub>]</th>
-                                            <th>Status</th>
-                                            <th>ID</th>
-                                        </tr>
-                                    </thead>
-                                    <!--<tfoot>
-                                        <tr>
-                                          <th>Target</th>
-                                          <th>Phase</th>
-                                          <th>Period [days]</th>
-                                          <th>Radius [R<sub>Earth</sub>]</th>
-                                          <th>Status</th>
-                                          <th>ID</th>
-                                        </tr>
-                                    </tfoot>-->
-                                    <tbody>
-                                        <tr>
-                                            <td>WASP-107 b</td>
-                                            <td>Transit</td>
-                                            <td>5.7</td>
-                                            <td>11.0</td>
-                                            <td>TBD</td>
-                                            <td>GTO 1201</td>
-                                        </tr>
-                                        <tr>
-                                          <td>WASP-39 b</td>
-                                          <td>Transit</td>
-                                          <td>4.1</td>
-                                          <td>14.2</td>
-                                          <td>TBD</td>
-                                          <td>ERS 1366</td>
-                                        </tr>
-                                        <tr>
-                                          <td>WASP-52 b</td>
-                                          <td>Transit</td>
-                                          <td>1.7</td>
-                                          <td>14.2</td>
-                                          <td>TBD</td>
-                                          <td>GTO 1201</td>
-                                        </tr>
-                                        <tr>
-                                          <td>HAT-P-1 b</td>
-                                          <td>Transit</td>
-                                          <td>4.5</td>
-                                          <td>14.8</td>
-                                          <td>TBD</td>
-                                          <td>GTO 1201</td>
-                                        </tr>
-                                        <tr>
-                                          <td>HAT-P-12 b</td>
-                                          <td>Transit</td>
-                                          <td>3.2</td>
-                                          <td>10.7</td>
-                                          <td>TBD</td>
-                                          <td>GTO 1281</td>
-                                        </tr>
-                                        <tr>
-                                          <td>WASP-17 b</td>
-                                          <td>Transit + Eclipse</td>
-                                          <td>3.7</td>
-                                          <td>21.0</td>
-                                          <td>TBD</td>
-                                          <td>GTO 1312</td>
-                                        </tr>
-                                        <tr>
-                                          <td>HAT-P-18 b</td>
-                                          <td>Transit</td>
-                                          <td>5.5</td>
-                                          <td>11.2</td>
-                                          <td>TBD</td>
-                                          <td>COM 2734</td>
-                                        </tr>
-                                        <tr>
-                                          <td>GJ 3090 b</td>
-                                          <td>Transit</td>
-                                          <td>2.9</td>
-                                          <td>2.1</td>
-                                          <td>TBD</td>
-                                          <td>GO 4098</td>
-                                        </tr>
-                                        <tr>
-                                          <td>L 98-59 d</td>
-                                          <td>Transit</td>
-                                          <td>7.5</td>
-                                          <td>1.6</td>
-                                          <td>TBD</td>
-                                          <td>GTO 1201, GO 4098</td>
-                                        </tr>
-                                        <tr>
-                                          <td>LTT 9779 b</td>
-                                          <td>Transit + Eclipse</td>
-                                          <td>0.8</td>
-                                          <td>4.7</td>
-                                          <td>TBD</td>
-                                          <td>GTO 1201</td>
-                                        </tr>
-                                        <tr>
-                                          <td>HATS-72 b</td>
-                                          <td>Transit</td>
-                                          <td>7.3</td>
-                                          <td>8.1</td>
-                                          <td>TBD</td>
-                                          <td>GO 2594</td>
-                                        </tr>
-                                        <tr>
-                                          <td>TRAPPIST-1 b</td>
-                                          <td>Transit</td>
-                                          <td>1.5</td>
-                                          <td>1.1</td>
-                                          <td>TBD</td>
-                                          <td>GO 2589</td>
-                                        </tr>
-                                        <tr>
-                                          <td>TRAPPIST-1 c</td>
-                                          <td>Transit</td>
-                                          <td>2.4</td>
-                                          <td>1.1</td>
-                                          <td>TBD</td>
-                                          <td>GO 2589</td>
-                                        </tr>
-                                        <tr>
-                                          <td>TRAPPIST-1 f</td>
-                                          <td>Transit</td>
-                                          <td>9.2</td>
-                                          <td>1.0</td>
-                                          <td>TBD</td>
-                                          <td>GTO 1201</td>
-                                        </tr>
-                                        <tr>
-                                          <td>GJ 9827 d</td>
-                                          <td>Transit</td>
-                                          <td>6.2</td>
-                                          <td>2.0</td>
-                                          <td>TBD</td>
-                                          <td>GO 4098</td>
-                                        </tr>
-                                        <tr>
-                                          <td>WASP-96 b</td>
-                                          <td>Transit</td>
-                                          <td>3.4</td>
-                                          <td>13.5</td>
-                                          <td>TBD</td>
-                                          <td>COM 2734</td>
-                                        </tr>
-                                        <tr>
-                                          <td>TOI-1685 b</td>
-                                          <td>Transit</td>
-                                          <td>0.7</td>
-                                          <td>1.7</td>
-                                          <td>TBD</td>
-                                          <td>GO 4098</td>
-                                        </tr>
-                                        <tr>
-                                          <td>TOI-270 d</td>
-                                          <td>Transit</td>
-                                          <td>11.4</td>
-                                          <td>2.1</td>
-                                          <td>TBD</td>
-                                          <td>GO 4098</td>
-                                        </tr>
-                                        <tr>
-                                          <td>K2-18 b</td>
-                                          <td>Transit</td>
-                                          <td>11.4</td>
-                                          <td>2.1</td>
-                                          <td>TBD</td>
-                                          <td>GO 2722</td>
-                                        </tr>
-                                        <tr>
-                                          <td>HAT-P-14 b</td>
-                                          <td>Transit</td>
-                                          <td>4.6</td>
-                                          <td>15.9</td>
-                                          <td>TBD</td>
-                                          <td>COM 1541</td>
-                                        </tr>
-                                        <tr>
-                                          <td>WASP-18 b</td>
-                                          <td>Eclipse</td>
-                                          <td>0.9</td>
-                                          <td>13.9</td>
-                                          <td>TBD</td>
-                                          <td>ERS 1366</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
+                            <p><b>Publication Lead:</b> </p>
+                            <p>Add the abstract here</p>
+                            <a target="_blank" rel="nofollow" href="https://undraw.co/">Link to NASA ADS entry &rarr;</a>
                         </div>
                     </div>
 
@@ -439,7 +247,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; tune-jwst 2024</span>
+                        <span>Copyright &copy; tunes-jwst 2024</span>
                     </div>
                 </div>
             </footer>
