--- a/wasp107.html
+++ b/wasp107.html
@@ -141,7 +141,7 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="publications.html">
+                <a class="nav-link" href="tables.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Publications</span></a>
             </li>
@@ -223,7 +223,7 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Survey Targets</h1>
+                    <h1 class="h3 mb-2 text-gray-800">WASP-107 b</h1>
                     <p class="mb-4">Here, we provide an overview of the properties for the targets in our survey.</p>
 
                     <!-- DataTales Example -->
