--- a/index.html
+++ b/index.html
@@ -206,6 +206,38 @@
                           observing time.
                         </p>
 
+                    <div class="row">
+
+                      <div class="col-xl-12 col-md-6 mb-4">
+                          <div class="card border-left-primary shadow h-100 py-2">
+                              <div class="card-body">
+                                  <div class="row no-gutters align-items-center">
+                                      <div class="col mr-2">
+                                          <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                              Progress Summary</div>
+                                          <div class="h6 mb-0 text-gray-800">
+                                          Targets Reduced<span
+                                                    class="float-right">14%</span></div>
+                                          <div class="progress mb-4">
+                                              <div class="progress-bar bg-warning" role="progressbar" style="width: 14%"
+                                                  aria-valuenow="3" aria-valuemin="0" aria-valuemax="21"></div>
+                                          </div>
+
+                                          <div class="h6 mb-0 text-gray-800">
+                                          Targets Published<span
+                                                    class="float-right">0%</span></div>
+                                          <div class="progress mb-4">
+                                              <div class="progress-bar bg-success" role="progressbar" style="width: 00%"
+                                                  aria-valuenow="0" aria-valuemin="0" aria-valuemax="21"></div>
+                                          </div>
+                                      </div>
+
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+
+                    </div>
 
                 </div>
                 <!-- /.container-fluid -->
